# lostandfound

./: .env  .gitignore  .replit  DEPLOYMENT.md  README.md  app.py  config.py  deploy.py  env.example  init_db.py  models.py  pyproject.toml  replit.md  requirements.txt
static/css/: style.css
static/js/: main.js
static/uploads/: .gitkeep
templates/: base.html  browse.html  dashboard.html  index.html  item_detail.html  notifications.html  post_item.html
templates/auth/: login.html  register.html
