[tool.poetry]
name = "lost-and-found"
version = "0.1.0"
description = "A Flask-based lost and found management system"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"
mysqlclient = "^2.2.0"
werkzeug = "^3.0.1"
pillow = "^10.1.0"
email-validator = "^2.1.0.post1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
